--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-fastapi>=0.115.14
-uvicorn>=0.27.1
-openai>=1.85.0
+fastapi>=0.100.0
+uvicorn>=0.20.0
+openai>=1.12.0
 python-dotenv>=1.0.0
-black>=25.1.0
-autopep8>=2.3.2
+black>=23.0.0
+autopep8>=2.0.0
 GitPython>=3.1.44
-pytest>=8.0.2
+pytest>=7.0.0
 requests>=2.31.0
-pydantic>=2.6.3
-SQLAlchemy>=2.0.28 
+pydantic>=2.0.0
+SQLAlchemy>=1.4.0
+typing-extensions>=4.0.0
+python-dateutil>=2.8.2
+pandas>=2.0.0
+pytest-asyncio>=0.21.0
+httpx>=0.24.0 
