--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
-fastapi>=0.100.0
-uvicorn>=0.20.0
-openai>=1.12.0
-python-dotenv>=1.0.0
-black>=23.0.0
-autopep8>=2.0.0
-GitPython>=3.1.44
+# Core dependencies
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pydantic>=1.8.2
+python-dotenv>=0.19.0
+
+# Code generation and formatting
+black>=21.7b0
+autopep8>=1.5.7
+
+# Machine Learning
+torch>=2.0.0
+transformers>=4.36.0
+accelerate>=0.27.0
+einops>=0.7.0
+
+# Testing
 pytest>=7.0.0
-requests>=2.31.0
-pydantic>=2.0.0
-SQLAlchemy>=1.4.0
-typing-extensions>=4.0.0
-python-dateutil>=2.8.2
-pandas>=2.0.0
-pytest-asyncio>=0.21.0
-httpx>=0.24.0 
+
+# Utilities
+python-multipart>=0.0.5
+aiofiles>=0.8.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4 
