--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ python-dotenv>=0.19.0
 black>=21.7b0
 autopep8>=1.5.7
 
-# Machine Learning
+# Machine Learning and AI
+groq>=0.4.0
 torch>=2.0.0
 transformers>=4.36.0
 accelerate>=0.27.0
