Clean up demo patches and output files, update PatchPilot with improved workflow

--- a/frontend/_config.yml
+++ b/frontend/_config.yml
@@ -47,6 +47,7 @@ api_endpoints:
   run_patch: "/run-patch/"
   execute_patch: "/execute-patch/"
   patch_status: "/patch-status/"
+  patch_images: "/patch-images/"
 
 # Theme colors (red theme)
 theme_colors:
